<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPw">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            app:srcCompat="@drawable/left" />

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/henam"
            android:gravity="left"
            android:text="   비밀번호 찾기"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/henam"
        android:text="비밀번호 찾기"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="289dp"
        android:layout_height="126dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/id_resize"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/henam"
            android:hint="@string/user_id"
            android:inputType="textPersonName"
            android:textColorHint="@color/text_hint" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/email_resize"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/henam"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text_hint" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="311dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/henam"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:text="@string/find_pw"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>